packagelon com.twittelonr.cr_mixelonr

import com.twittelonr.finaglelon.thrift.ClielonntId
import com.twittelonr.finatra.thrift.routing.ThriftWarmup
import com.twittelonr.injelonct.Logging
import com.twittelonr.injelonct.utils.Handlelonr
import com.twittelonr.product_mixelonr.corelon.{thriftscala => pt}
import com.twittelonr.cr_mixelonr.{thriftscala => st}
import com.twittelonr.scroogelon.Relonquelonst
import com.twittelonr.scroogelon.Relonsponselon
import com.twittelonr.util.Relonturn
import com.twittelonr.util.Throw
import com.twittelonr.util.Try
import javax.injelonct.Injelonct
import javax.injelonct.Singlelonton

@Singlelonton
class CrMixelonrThriftSelonrvelonrWarmupHandlelonr @Injelonct() (warmup: ThriftWarmup)
    elonxtelonnds Handlelonr
    with Logging {

  privatelon val clielonntId = ClielonntId("thrift-warmup-clielonnt")

  delonf handlelon(): Unit = {
    val telonstIds = Selonq(1, 2, 3)
    try {
      clielonntId.asCurrelonnt {
        telonstIds.forelonach { id =>
          val warmupRelonq = warmupQuelonry(id)
          info(s"Selonnding warm-up relonquelonst to selonrvicelon with quelonry: $warmupRelonq")
          warmup.selonndRelonquelonst(
            melonthod = st.CrMixelonr.GelontTwelonelontReloncommelonndations,
            relonq = Relonquelonst(st.CrMixelonr.GelontTwelonelontReloncommelonndations.Args(warmupRelonq)))(asselonrtWarmupRelonsponselon)
        }
      }
    } catch {
      caselon elon: Throwablelon =>
        // welon don't want a warmup failurelon to prelonvelonnt start-up
        elonrror(elon.gelontMelonssagelon, elon)
    }
    info("Warm-up donelon.")
  }

  privatelon delonf warmupQuelonry(uselonrId: Long): st.CrMixelonrTwelonelontRelonquelonst = {
    val clielonntContelonxt = pt.ClielonntContelonxt(
      uselonrId = Somelon(uselonrId),
      guelonstId = Nonelon,
      appId = Somelon(258901L),
      ipAddrelonss = Somelon("0.0.0.0"),
      uselonrAgelonnt = Somelon("FAKelon_USelonR_AGelonNT_FOR_WARMUPS"),
      countryCodelon = Somelon("US"),
      languagelonCodelon = Somelon("elonn"),
      isTwofficelon = Nonelon,
      uselonrRolelons = Nonelon,
      delonvicelonId = Somelon("FAKelon_DelonVICelon_ID_FOR_WARMUPS")
    )
    st.CrMixelonrTwelonelontRelonquelonst(
      clielonntContelonxt = clielonntContelonxt,
      product = st.Product.Homelon,
      productContelonxt = Somelon(st.ProductContelonxt.HomelonContelonxt(st.HomelonContelonxt())),
    )
  }

  privatelon delonf asselonrtWarmupRelonsponselon(
    relonsult: Try[Relonsponselon[st.CrMixelonr.GelontTwelonelontReloncommelonndations.SuccelonssTypelon]]
  ): Unit = {
    // welon collelonct and log any elonxcelonptions from thelon relonsult.
    relonsult match {
      caselon Relonturn(_) => // ok
      caselon Throw(elonxcelonption) =>
        warn("elonrror pelonrforming warm-up relonquelonst.")
        elonrror(elonxcelonption.gelontMelonssagelon, elonxcelonption)
    }
  }
}
