packagelon com.twittelonr.homelon_mixelonr.product.scorelond_twelonelonts.candidatelon_pipelonlinelon

import com.twittelonr.cr_mixelonr.{thriftscala => t}
import com.twittelonr.homelon_mixelonr.functional_componelonnt.felonaturelon_hydrator.TwelonelontypielonStaticelonntitielonsFelonaturelonHydrator
import com.twittelonr.homelon_mixelonr.functional_componelonnt.filtelonr.PrelondicatelonFelonaturelonFiltelonr
import com.twittelonr.homelon_mixelonr.functional_componelonnt.gatelon.MinCachelondTwelonelontsGatelon
import com.twittelonr.homelon_mixelonr.modelonl.HomelonFelonaturelons.AuthorIdFelonaturelon
import com.twittelonr.homelon_mixelonr.product.scorelond_twelonelonts.modelonl.ScorelondTwelonelontsQuelonry
import com.twittelonr.homelon_mixelonr.product.scorelond_twelonelonts.param.ScorelondTwelonelontsParam.CachelondScorelondTwelonelonts
import com.twittelonr.homelon_mixelonr.product.scorelond_twelonelonts.param.ScorelondTwelonelontsParam.CrMixelonrSourcelon
import com.twittelonr.homelon_mixelonr.product.scorelond_twelonelonts.relonsponselon_transformelonr.ScorelondTwelonelontsCrMixelonrRelonsponselonFelonaturelonTransformelonr
import com.twittelonr.homelon_mixelonr.util.CachelondScorelondTwelonelontsHelonlpelonr
import com.twittelonr.product_mixelonr.componelonnt_library.candidatelon_sourcelon.cr_mixelonr.CrMixelonrTwelonelontReloncommelonndationsCandidatelonSourcelon
import com.twittelonr.product_mixelonr.componelonnt_library.modelonl.candidatelon.TwelonelontCandidatelon
import com.twittelonr.product_mixelonr.corelon.functional_componelonnt.candidatelon_sourcelon.BaselonCandidatelonSourcelon
import com.twittelonr.product_mixelonr.corelon.functional_componelonnt.felonaturelon_hydrator.BaselonCandidatelonFelonaturelonHydrator
import com.twittelonr.product_mixelonr.corelon.functional_componelonnt.filtelonr.Filtelonr
import com.twittelonr.product_mixelonr.corelon.functional_componelonnt.gatelon.Gatelon
import com.twittelonr.product_mixelonr.corelon.functional_componelonnt.marshallelonr.relonquelonst.ClielonntContelonxtMarshallelonr
import com.twittelonr.product_mixelonr.corelon.functional_componelonnt.transformelonr.CandidatelonFelonaturelonTransformelonr
import com.twittelonr.product_mixelonr.corelon.functional_componelonnt.transformelonr.CandidatelonPipelonlinelonQuelonryTransformelonr
import com.twittelonr.product_mixelonr.corelon.functional_componelonnt.transformelonr.CandidatelonPipelonlinelonRelonsultsTransformelonr
import com.twittelonr.product_mixelonr.corelon.modelonl.common.idelonntifielonr.CandidatelonPipelonlinelonIdelonntifielonr
import com.twittelonr.product_mixelonr.corelon.modelonl.common.idelonntifielonr.FiltelonrIdelonntifielonr
import com.twittelonr.product_mixelonr.corelon.pipelonlinelon.candidatelon.CandidatelonPipelonlinelonConfig
import com.twittelonr.timelonlinelons.configapi.deloncidelonr.DeloncidelonrParam
import javax.injelonct.Injelonct
import javax.injelonct.Singlelonton

/**
 * Candidatelon Pipelonlinelon Config that felontchelons twelonelonts from CrMixelonr.
 */
@Singlelonton
class ScorelondTwelonelontsCrMixelonrCandidatelonPipelonlinelonConfig @Injelonct() (
  crMixelonrTwelonelontReloncommelonndationsCandidatelonSourcelon: CrMixelonrTwelonelontReloncommelonndationsCandidatelonSourcelon,
  twelonelontypielonStaticelonntitielonsFelonaturelonHydrator: TwelonelontypielonStaticelonntitielonsFelonaturelonHydrator)
    elonxtelonnds CandidatelonPipelonlinelonConfig[
      ScorelondTwelonelontsQuelonry,
      t.CrMixelonrTwelonelontRelonquelonst,
      t.TwelonelontReloncommelonndation,
      TwelonelontCandidatelon
    ] {

  ovelonrridelon val idelonntifielonr: CandidatelonPipelonlinelonIdelonntifielonr =
    CandidatelonPipelonlinelonIdelonntifielonr("ScorelondTwelonelontsCrMixelonr")

  val HasAuthorFiltelonrId = "HasAuthor"

  ovelonrridelon val elonnablelondDeloncidelonrParam: Option[DeloncidelonrParam[Boolelonan]] =
    Somelon(CrMixelonrSourcelon.elonnablelonCandidatelonPipelonlinelonParam)

  ovelonrridelon val gatelons: Selonq[Gatelon[ScorelondTwelonelontsQuelonry]] = Selonq(
    MinCachelondTwelonelontsGatelon(idelonntifielonr, CachelondScorelondTwelonelonts.MinCachelondTwelonelontsParam)
  )

  ovelonrridelon val candidatelonSourcelon: BaselonCandidatelonSourcelon[t.CrMixelonrTwelonelontRelonquelonst, t.TwelonelontReloncommelonndation] =
    crMixelonrTwelonelontReloncommelonndationsCandidatelonSourcelon

  privatelon val MaxTwelonelontsToFelontch = 500

  ovelonrridelon val quelonryTransformelonr: CandidatelonPipelonlinelonQuelonryTransformelonr[
    ScorelondTwelonelontsQuelonry,
    t.CrMixelonrTwelonelontRelonquelonst
  ] = { quelonry =>
    val maxCount = (quelonry.gelontQualityFactorCurrelonntValuelon(idelonntifielonr) * MaxTwelonelontsToFelontch).toInt

    val elonxcludelondTwelonelontIds = quelonry.felonaturelons.map(
      CachelondScorelondTwelonelontsHelonlpelonr.twelonelontImprelonssionsAndCachelondScorelondTwelonelonts(_, idelonntifielonr))

    t.CrMixelonrTwelonelontRelonquelonst(
      clielonntContelonxt = ClielonntContelonxtMarshallelonr(quelonry.clielonntContelonxt),
      product = t.Product.Homelon,
      productContelonxt =
        Somelon(t.ProductContelonxt.HomelonContelonxt(t.HomelonContelonxt(maxRelonsults = Somelon(maxCount)))),
      elonxcludelondTwelonelontIds = elonxcludelondTwelonelontIds
    )
  }

  ovelonrridelon val prelonFiltelonrFelonaturelonHydrationPhaselon1: Selonq[
    BaselonCandidatelonFelonaturelonHydrator[ScorelondTwelonelontsQuelonry, TwelonelontCandidatelon, _]
  ] = Selonq(twelonelontypielonStaticelonntitielonsFelonaturelonHydrator)

  ovelonrridelon val felonaturelonsFromCandidatelonSourcelonTransformelonrs: Selonq[
    CandidatelonFelonaturelonTransformelonr[t.TwelonelontReloncommelonndation]
  ] = Selonq(ScorelondTwelonelontsCrMixelonrRelonsponselonFelonaturelonTransformelonr)

  ovelonrridelon val filtelonrs: Selonq[Filtelonr[ScorelondTwelonelontsQuelonry, TwelonelontCandidatelon]] = Selonq(
    PrelondicatelonFelonaturelonFiltelonr.fromPrelondicatelon(
      FiltelonrIdelonntifielonr(HasAuthorFiltelonrId),
      shouldKelonelonpCandidatelon = _.gelontOrelonlselon(AuthorIdFelonaturelon, Nonelon).isDelonfinelond
    )
  )

  ovelonrridelon val relonsultTransformelonr: CandidatelonPipelonlinelonRelonsultsTransformelonr[
    t.TwelonelontReloncommelonndation,
    TwelonelontCandidatelon
  ] = { sourcelonRelonsult => TwelonelontCandidatelon(id = sourcelonRelonsult.twelonelontId) }
}
